// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly left 1`] = `
<button
  className="followup-link followup-timeline-count followup-sprite followup-sprite-timeline-count followup-timeline-count-arrow followup-timeline-count-arrow-left"
  disabled={false}
  onTouchTap={[Function]}
>
  1
</button>
`;

exports[`rendering renders correctly left disabled 1`] = `
<button
  className="followup-link followup-timeline-count followup-sprite followup-sprite-timeline-count followup-timeline-count-arrow followup-timeline-count-arrow-left"
  disabled={true}
  onTouchTap={[Function]}
>
  1
</button>
`;

exports[`rendering renders correctly right 1`] = `
<button
  className="followup-link followup-timeline-count followup-sprite followup-sprite-timeline-count followup-timeline-count-arrow followup-timeline-count-arrow-right"
  disabled={false}
  onTouchTap={[Function]}
>
  1
</button>
`;

exports[`rendering renders correctly right disabled 1`] = `
<button
  className="followup-link followup-timeline-count followup-sprite followup-sprite-timeline-count followup-timeline-count-arrow followup-timeline-count-arrow-right"
  disabled={true}
  onTouchTap={[Function]}
>
  1
</button>
`;
